# cli

./: .gitignore  README.md  api.html  codecov.yml  contributing.html  deploy.sh  genindex.html  index.html  installation.html  objects.inv  output.csv  output.feather  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: build-and-deploy-docs.yml  release-drafter.yml  release.yml  test-and-verify.yml
_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: conf.py  contributing.rst  installation.rst  usage.rst
quantaq_cli/: exceptions.py  utilities.py  variables.py
quantaq_cli/console/: __init__.py  application.py
quantaq_cli/console/commands/: __init__.py  concat.py  expunge.py  flag.py  merge.py  munge.py  resample.py
tests/: test_clean.py  test_cli.py  test_concat.py  test_expunge.py  test_flag.py  test_merge.py  test_resample.py
tests/files/: lcs-1.csv  lcs-2.csv  ref.csv
tests/files/modulair/: MOD-final.csv  MOD-raw.csv
tests/files/modulair-pm/: file1.csv  file2.csv
tests/files/modulair-pm/logs/: 000001.txt  000002.txt
