[tool.poetry]
name = "quantaq-cli"
version = "0.2.5-alpha.0"
description = "The QuantAQ CLI"
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/quant-aq/cli"
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.4"
click = "^7.1.2"
pyarrow = "^0.17.1"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-coverage = "^0.0"
sphinx = "^3.1.0"
recommonmark = "^0.6.0"
toml = "^0.10.1"
sphinx-click = "^2.3.2"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.scripts]
quantaq-cli = "quantaq_cli.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
