[tool.poetry]
name = "quantaq-cli"
version = "0.5.0"
description = "The QuantAQ CLI"
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/quant-aq/cli"
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = ">=3.8,<4"
pandas = ">=1.0.4"
click = "^7.1.2"
pyarrow = ">=0.17.1"
terminaltables = "^3.1.0"
urllib3 = "^1.26.10"
numpy = "^1.23.2"
rich-click = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-coverage = "^0.0"
sphinx = "^5.3"
recommonmark = "^0.6.0"
toml = "^0.10.1"
sphinx-click = "^4.4"
sphinx-rtd-theme = "^0.5.0"

[tool.poetry.scripts]
quantaq-cli = "quantaq_cli.console:main"

[tool.poetry.group.dev.dependencies]
setuptools = "^65.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
